apps/argocd/default/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: timgiertz-prod-issuer
  name: shared-default-gateway
  namespace: default
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.apps.timgiertz.com'
    name: shared-http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      kinds:
      - kind: TCPRoute
    name: shared-tcp
    port: 5432
    protocol: TCP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.apps.timgiertz.com'
    name: shared-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: apps-timgiertz-com-tls
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.apps.timgiertz.com'
    name: shared-tls
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  labels:
    https-upgrade: "true"
  name: https-upgrade
  namespace: default
spec:
  hostnames:
  - '*.apps.timgiertz.com'
  parentRefs:
  - kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-http
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
